2003-12-21 Andy Ruder <aeruder at ksu dot edu>
 * OFTC made it into the server list
 * made a change to the topic inspector that will hopefully make it
   look good on OSX

2003-12-19 Andy Ruder <aeruder at ksu dot edu>
 * Made /dcc a little more sane on the syntax.
 * Fixed some early deallocation bugs in delegate messages
 * fixed user list weirdness
 * fixed a server list bug when editing two different things

2003-12-17 Andy Ruder <aeruder at ksu dot edu>
 * Finished all .nibs, got Server list working as well as all the other
   things working on the OSX port.
 * Slightly modified bundle loading to search for bundles in the .app resource
   path.  Will make things simpler to produce distributable binary for
   TalkSoup at some other time for OSX.

2003-12-15 Andy Ruder <aeruder at ksu dot edu>
 * Lots of minor fixes to get OSX working.
 * Got Preferences, Bundle Setup, Channels, User lists working on OSX.
 * Made OSX port use the right directory for bundles (Application Support
   as opposed to ApplicationSupport)

2003-12-14 Andy Ruder <aeruder at ksu dot edu>
 * Bundle setup now auto applies its changes.

2003-12-13 Andy Ruder <aeruder at ksu dot edu>
 * I am a retard.  I did not realize that outlets do not have an automatic
   retain when assigned to the instance variable.  Therefore I should be
   releasing those things either!  The only reason it worked was due to a
   GNUstep mem-leak.  I am a retard!
 * Fixed a bug with DCC file transfer support where it never would download
   without an explicit directory given on the /dcc get line.
 * Got the OSX port actually connected and talking in a channel.

2003-12-07 Andy Ruder <aeruder at ksu dot edu>
 * Made the serverlist reuse unconnected windows (with an option to force a
   new window)
 * Put in some checks for the validity of the download directory in dcc
   support

2003-12-06 Andy Ruder <aeruder at ksu dot edu>
 * Made a makefile fix that should disable AppKit from being linked in on OSX